# UTOPIA-Upload-Assistant

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  upload.py  upload.spec
.github/workflows/: docker.yml  main.yml
data/: config.example.json  naming.json  naming.l4g.json  naming.l4gutp.json
src/: args.py  bbcode.py  clients.py  discparse.py  prep.py  search.py  vs.py
src/trackers/: COMMON.py  UNIT3D_TEMPLATE.py  UTOPIA.py
web/: generator.html
